--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="light">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
+  <script src="https://kit.fontawesome.com/9796f99c85.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="body">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-modal/3.14.3/react-modal.min.js"
-    integrity="sha512-MY2jfK3DBnVzdS2V8MXo5lRtr0mNRroUI9hoLVv2/yL3vrJTam3VzASuKQ96fLEpyYIT4a8o7YgtUs5lPjiLVQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </body>
 
 </html>
