--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body id="body">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-
+  <script
+    src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyChKQRC17o-TBf_uJvmHrrE7miSWMWF7S4"></script>
 </body>
 
 </html>
